Bug 494093 - Empty events show up as an empty delegate
Summary: Empty events show up as an empty delegate
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-04 09:05 UTC by Tobias Fella
Modified: 2025-05-18 01:09 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Fella 2024-10-04 09:05:12 UTC
SUMMARY


STEPS TO REPRODUCE
1. Send a malformed event without body / formatted body
2. observer in neochat

OBSERVED RESULT
small delegate without any content shows up

EXPECTED RESULT
Event should either not show up at all or (better) show up with a message like "This event does not have any content"
Comment 1 Bug Janitor Service 2025-05-15 19:48:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/2278
Comment 2 Joshua Goins 2025-05-18 01:09:29 UTC
Git commit e9568b50fcaf67abac7a86b2254c31e4ea1ff959 by Joshua Goins.
Committed on 18/05/2025 at 01:09.
Pushed by redstrate into branch 'master'.

If the message body is empty, say so

Normally if a malformed event is empty it will just be empty space - but
that looks buggy. Instead, we can add a message saying "This event does
not have any content."

M  +13   -5    src/timeline/models/messagecontentmodel.cpp

https://invent.kde.org/network/neochat/-/commit/e9568b50fcaf67abac7a86b2254c31e4ea1ff959